# dotfiles

./: .env  .gitmodules  README.md  setup.bat  setup.sh
configs/: .alacritty.toml  .not_logged_in_yet  .tmux.conf  .zshrc  config  dafer_silakka54.vil  starship.toml
configs/arch/: aurlist.txt  pkglist.txt
configs/nvim/: Readme.md  init.lua
configs/zed/: keymap.json  settings.json  tasks.json
scripts/: 01_system_deps.sh  03_python_setup.sh  04_rust_setup.sh  05_neovim_setup.sh  06_tmux_starship.sh  activate_venv.bat  win_kb.ahk  wsl_terminate.bat
scripts/arch/: 01_system_deps.sh  02_zsh_setup.sh
scripts/archlinux/: 01_system_deps.sh
scripts/benchmarks/: all-results.csv  benchmark-apps.ps1  benchmark-results.csv  benchmark-summary.txt  benchmark.sh  run_benchmark.bat  summarize-results.ps1
scripts/phone_backup/: backup_paths.conf  backup_paths.ini  phone_backup.sh  setup.sh
scripts/phone_backup/linux/: GUIDE.md  phone_backup.sh
scripts/phone_backup/windows/: QUICKSTART.md  phone_backup.bat  phone_backup.ps1
scripts/ubuntu/: 01_system_deps.sh  02_zsh_setup.sh
scripts/windows/: Invoke-PythonVenv.ps1  ape.bat  ape.cmd  batch_end.bat  end_batch.bat  install_scoop_packages.ps1  spe.bat  spe.cmd  win_kb.ahk  wslt.bat
scripts/windows/installer/: win_installer.iss
scripts/windows/python_venvs_manager/: ape.cmd  python_venv_config.toml.example  (+1 more)
scripts/windows/rust/: BUILD_NOTES.md  COMPARISON.md  Cargo.toml  FEATURE_COMPARISON.md  INDEX.md  Invoke-PythonVenv.ps1  PERFORMANCE.md  QUICKSTART.md  README.md  ape.rs  build.bat  build.ps1  spe.cmd  spe.rs
(+38 files in other folders)
